--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -15,8 +16,11 @@
     "express": "~4.16.1",
     "helmet": "^3.23.3",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
     "morgan": "~1.9.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.2.1",
     "pug": "2.0.0-beta11"
   },
