--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.2.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "supertest": "^5.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
